# rox

./: .gitignore  Cargo.toml  Dockerfile  README.md  example_rox.yml  roxfile.yml
.github/workflows/: checks.yml  release.yml
docs/: dev_docs.md  dev_docs.txt  release.md
src/: ci.rs  cli.rs  display.rs  docs.rs  execution.rs  file_requirements.rs  files_requirements.rs  lib.rs  logs.rs  main.rs  model_injection.rs  models.rs  output.rs  parser.rs  roxfile.rs  runner.rs  syntax.rs  targets.rs  task_runner.rs  utils.rs  version_requirements.rs
src/modules/: ci.rs  logs.rs  mod.rs
src/modules/execution/: mod.rs  model_injection.rs  output.rs
tests/: cli.rs  models.rs  test_cli.rs
tests/expected/: help_output.txt
tests/files/: Dockerfile  test_roxfile.yml
