[package]
name = "rox-cli"
authors = ["Thomas La Piana"]
description = "Composable build tool inspired by Make"
version = "0.3.5"
edition = "2021"
repository = "https://github.com/ThomasLaPiana/rox"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "rox"
path = "src/main.rs"

[lib]
name = "rox"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["string", "cargo"] }
cli-table = "0.4.7"
colored = "2.0.4"
cross = "0.2.5"
indicatif = { version = "0.17.6", features = ["rayon"] }
itertools = "0.11.0"
rayon = "1.8.0"
semver = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
