[package]
name = "rox-cli"
authors = ["Thomas La Piana"]
description = "Composable build tool inspired by Make"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/ThomasLaPiana/rox"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "rox"
path = "src/main.rs"

[lib]
name = "rox"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["string", "cargo"] }
cli-table = "0.4.7"
colored = "2.0.4"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
termimad = "0.26.1"
webbrowser = "0.8.12"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
